@@ -12,6 +12,8 @@ MAIN COMMITS
 2/12 -> "#4 Components - all components" -> Desarrollo de componentes
 2/12 -> "#5 Components - all components" -> Desarrollo de componentes
 2/12 -> "#6 Components - all components" -> Desarrollo de componentes
+2/15 -> "#7 Components - link fix" -> Arreglo de rendimiento general
+2/15 -> "#8 Components - all components" -> Desarrollo de componentes
 
 CONTROL COMMITS
 ---------------
